<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dodsoneng.improvpicker.MainActivity"
    tools:showIn="@layout/activity_main"
    android:scrollIndicators="right">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbox_text1"
                android:id="@+id/checkBox1"
                android:checked="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"    />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=":"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="100"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle=""
                android:singleLine="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/textView1"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="100"
                android:background="#D0D0D0"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle="bold|italic"
                android:singleLine="true" />
        </TableRow>

        <TableRow>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbox_text2"
                android:id="@+id/checkBox2"
                android:checked="true"
                android:layout_below="@+id/checkBox1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=":"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="100"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle=""
                android:singleLine="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/textView2"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="2"
                android:background="#D0D0D0"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle="bold|italic"
                android:singleLine="true" />
        </TableRow>

        <TableRow>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbox_text3"
                android:id="@+id/checkBox3"
                android:checked="true"
                android:layout_below="@+id/checkBox2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=":"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="100"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle=""
                android:singleLine="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/textView3"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="2"
                android:background="#D0D0D0"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle="bold|italic"
                android:singleLine="false" />
        </TableRow>

        <TableRow>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbox_text4"
                android:id="@+id/checkBox4"
                android:checked="true"
                android:layout_below="@+id/checkBox3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=":"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="100"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle=""
                android:singleLine="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/textView4"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="2"
                android:background="#D0D0D0"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle="bold|italic"
                android:singleLine="false" />
        </TableRow>
        <TableRow>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbox_text5"
                android:id="@+id/checkBox5"
                android:checked="true"
                android:layout_below="@+id/checkBox4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=":"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="100"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle=""
                android:singleLine="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/textView5"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="2"
                android:background="#D0D0D0"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle="bold|italic"
                android:singleLine="false" />
        </TableRow>
        <TableRow android:showDividers="beginning|end">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbox_text6"
                android:id="@+id/checkBox6"
                android:checked="true"
                android:layout_below="@+id/checkBox5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=":"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="100"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle=""
                android:singleLine="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/textView6"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="2"
                android:background="#D0D0D0"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle="bold|italic"
                android:singleLine="false" />
        </TableRow>
        <TableRow>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbox_text7"
                android:id="@+id/checkBox7"
                android:checked="true"
                android:layout_below="@+id/checkBox6"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=":"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="100"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle=""
                android:singleLine="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/textView7"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="2"
                android:background="#D0D0D0"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle="bold|italic"
                android:singleLine="false" />
        </TableRow>
        <TableRow>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbox_text8"
                android:id="@+id/checkBox8"
                android:checked="true"
                android:layout_below="@+id/checkBox7"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=":"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="100"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle=""
                android:singleLine="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/textView8"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="2"
                android:background="#D0D0D0"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle="bold|italic"
                android:singleLine="false" />
        </TableRow>
        <TableRow android:paddingBottom="10dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbox_text9"
                android:id="@+id/checkBox9"
                android:checked="true"
                android:layout_below="@+id/checkBox8"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=":"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="100"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle=""
                android:singleLine="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/textView9"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:layout_weight="1"
                android:maxLines="2"
                android:background="#D0D0D0"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle="bold|italic"
                android:singleLine="false" />
        </TableRow>
<!--
        <TableRow android:paddingTop="10dp" android:paddingBottom="10dp" >
        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#000000" android:layout_span="2"/>
        </TableRow>

        <Button android:id="@+id/button1" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/button1" />
-->
    </TableLayout>

</RelativeLayout>
